<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="32dp"
            android:orientation="vertical">
            <TextView android:id="@+id/textView"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginLeft="32dp"
                      android:layout_marginRight="8dp"
                      android:layout_marginTop="16dp"
                      android:text="@string/title_category"
                      android:textColor="@color/colorBlack"
                      android:textSize="14sp"/>
            <FrameLayout android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="16dp"
                         android:layout_marginRight="16dp"
                         android:layout_marginTop="8dp"

                         android:background="@drawable/bg_rect_stroke_grey_corner_5">
                <Spinner android:id="@+id/category_spinner"
                         android:layout_width="match_parent"
                         android:layout_height="48dp"
                         android:layout_marginRight="8dp"/>
            </FrameLayout>

            <TextView android:id="@+id/textView2"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginLeft="32dp"
                      android:layout_marginRight="8dp"
                      android:layout_marginTop="16dp"
                      android:text="@string/title_subcategory"
                      android:textColor="@color/colorBlack"
                      android:textSize="14sp"/>
            <FrameLayout android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="16dp"

                         android:layout_marginRight="16dp"
                         android:layout_marginTop="8dp"
                         android:background="@drawable/bg_rect_stroke_grey_corner_5">
                <Spinner android:id="@+id/subcategory_spinner"
                         android:layout_width="match_parent"
                         android:layout_height="48dp"
                         android:layout_marginRight="8dp"/>
            </FrameLayout>
            <TextView android:id="@+id/textView3"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginLeft="32dp"
                      android:layout_marginRight="8dp"
                      android:layout_marginTop="16dp"
                      android:text="@string/title_description"
                      android:textColor="@color/colorBlack"/>
            <EditText android:id="@+id/detail_description_et"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginLeft="16dp"
                      android:layout_marginRight="16dp"
                      android:layout_marginTop="8dp"
                      android:background="@drawable/bg_rect_stroke_grey_corner_5"
                      android:hint="@string/hint_detail_description"
                      android:minHeight="48dp"
                      android:paddingBottom="8dp"
                      android:textColorHint="@color/colorGrey"
                      android:paddingLeft="16dp"
                      android:paddingRight="16dp"
                      android:paddingTop="8dp"
                      android:textColor="@color/colorGrey"
                      android:textSize="14sp"/>
            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/title_date"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:id="@+id/detail_date_tv"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_rect_stroke_grey_corner_5"
                android:padding="16dp"
                android:textSize="14sp"
                android:text="@string/detail_date_now_text"
                android:textColor="@color/colorGrey"/>
            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/title_cost"
                android:textColor="@color/colorBlack"/>
            <EditText
                android:id="@+id/detail_pay_et"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_rect_stroke_grey_corner_5"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:padding="16dp"
                android:textSize="14sp"
                android:textColorHint="@color/colorGrey"
                android:hint="@string/detail_set_payed_text"
                android:textColor="@color/colorGrey"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>

